# UA1244_alpha

./: .env_example  .gitignore  .pylintrc  Jenkinsfile  Makefile  README.md  fixtures.json  logging.conf  manage.py  pyproject.toml
Forum/: celery.py  settings.py  urls.py
common/validators/: image_validator.py
communications/: __init__.py  consumers.py  di_container.py  logic.py  middlewares.py  models.py  permissions.py  routing.py  serializers.py  tests.py  urls.py  views.py
communications/consumers/: __init__.py  messages.py  notifications.py
communications/entities/: base.py  messages.py
communications/events/: base.py  messages.py
communications/repositories/: base.py  mongo.py
communications/services/: messages.py
docker/: .dockerignore  docker-compose.yml  docker_compose.yml
docker/python/: Dockerfile  start-web.sh
forum/: asgi.py  celery.py  settings.py  urls.py
forum/utils/: logging_utils.py
front/: Dockerfile  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx
investment_tracking/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
investment_tracking/migrations/: 0001_initial.py  0002_rename_investor_id_investmenttracking_investor_and_more.py  0003_investmenttracking_unique_investor_startup.py
investors/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
k8s/: configmap.yaml  ingress.yaml
logs/: debug.log.2024-10-30  debug.log.2024-10-31  debug.log.2024-11-01  debug.log.2024-11-02  debug.log.2024-11-03
notifications/: filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
profiles/: models.py  serializers.py  tests.py  urls.py  views.py
projects/: models.py  serializers.py  tests.py  urls.py  views.py
startups/: filters.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
track_projects/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: logic.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
(+76 files in other folders)
