[tool.poetry]
name = "forum"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
djoser = "^2.2.3"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.4.0"
gunicorn = "^23.0.0"
celery = "^5.4.0"
redis = "^5.1.1"
flower = "^2.0.1"
channels = "^4.1.0"
daphne = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
pylint-django = "^2.5.5"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

